remove fb secret; uncomment sendmail

--- a/Sweaty_T_Shirt/Web.config
+++ b/Sweaty_T_Shirt/Web.config
@@ -31,11 +31,11 @@
     <add key="elmah.mvc.allowedUsers" value="*"/>
     <add key="elmah.mvc.route" value="elmah"/>
     <add key="MvcMailer.BaseURL" value=""/>
-    <add key="FacebookApplicationUrl" value="https://developers.facebook.com/apps/416517368461806"/>
+    <add key="FacebookApplicationUrl" value="https://developers.facebook.com/apps/NONESUCH"/>
     <add key="FacebookScope" value="publish_stream,publish_checkins"/>
     <add key="FacebookFields" value="id,first_name,last_name,link,username,gender,email,age_range,picture.height(200)"/>
-    <add key="FacebookAppId" value="416517368461806"/>
-    <add key="FacebookAppSecret" value="b15efe8b9c46dfbced7e6f38733d71e8"/>
+    <add key="FacebookAppId" value="NONESUCH"/>
+    <add key="FacebookAppSecret" value="NONESUCH"/>
     <add key="RunDatabaseInitializer" value="true"/>
     <add key="SendEmailsInterval" value="60"/>
   </appSettings>
